clusters/hetzner/apps/utilities/spotify-dashboard/app/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: spotify-dashboard
    app.kubernetes.io/instance: main
  name: spotify-dashboard
  namespace: utilities
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spotify-dashboard
      app.kubernetes.io/instance: main
  serviceName: "spotify-dashboard"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spotify-dashboard
        app.kubernetes.io/instance: main
    spec:
      hostname: spotify-dashboard
      containers:
        - name: spotify-dashboard
          image: ghcr.io/behnh/spotify-dashboard:bleeding-edge
          resources:
            requests:
              memory: "500Mi"
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 3000
              name: http
