clusters/hetzner/apps/utilities/spotify-dashboard/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-dashboard
  namespace: utilities
  labels:
    app.kubernetes.io/name: spotify-dashboard
spec:
  selector:
    app.kubernetes.io/name: spotify-dashboard
  ports:
    - port: 3000
      name: http
      targetPort: http
